# CompetitiveProgramming

./: .gitignore  README.md
Cpp/: CMakeLists.txt
Cpp/CodeChef/COOK127C/: MATXOR.cpp  PAWRI.cpp  WEIGHTBL.cpp
Cpp/CodeForces/102966/: A.cpp  C.cpp  L.cpp  a_test.py
Cpp/CodeForces/1335/: A.cpp  D.cpp
Cpp/CodeForces/1399/: A.cpp  E1.cpp
Cpp/CodeForces/1433/: C.cpp  D.cpp
Cpp/CodeForces/1490/: A.cpp  B.cpp  D.cpp
Cpp/CodeForces/1492/: A.cpp  B.cpp
Cpp/CodeForces/1496/: A.cpp  B.cpp
Cpp/CodeForces/676/: C.cpp
Cpp/CodeForces/893/: C.cpp
Cpp/Facebook_ITESM_2021/: A.cpp  B.cpp  C.cpp  D.cpp
Cpp/ICPCs_Mexicos_GP_2020/Day1/: C.cpp  H.cpp
Cpp/ICPCs_Mexicos_GP_2020/Day2/: A.cpp  B.cpp  B2.cpp  E.cpp  F.cpp  K.cpp
Cpp/ICPCs_Mexicos_GP_2020/Day3/: C.cpp  E.cpp  G.cpp  H.cpp  I.cpp  L.cpp  M.cpp
Cpp/ICPCs_Mexicos_GP_2020/Latam/: C.cpp  D.cpp  E.cpp  L.cpp  N.cpp
Cpp/SemanaI_2019/Friday/: A.cpp  C.cpp  F.cpp
Cpp/SemanaI_2019/Monday/: A.cpp  B.cpp  C.cpp  E.cpp  F.cpp  H.cpp
Cpp/SemanaI_2019/Thursday/: A.cpp  B.cpp  D.cpp  E.cpp  F.cpp  H.cpp
Cpp/SemanaI_2019/Tuesday/: A.cpp  F.cpp
Cpp/SemanaI_2019/Wednesday/: A.cpp  B.cpp  D.cpp  F.cpp  G.cpp  H.cpp
Cpp/Spoj/: BBIN2.cpp  EKO.cpp  HIGHWAYS.cpp  MARBLES.cpp  TESTCON0.cpp  TESTCON0_2.cpp
Cpp/TecNM_2019/: A.cpp  BinC.c  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
Cpp/misc/2019_01_23/: Ex1.cpp  Ex2.cpp
Cpp/misc/2019_02_13/: Ex1.cpp
Cpp/misc/2019_02_27/: Tests.cpp
Cpp/misc/2019_09_13/: Problem330B.cpp
Cpp/misc/2019_09_25/: ICPC_A.cpp
Cpp/misc/2020_02_08/: A.cpp  D.cpp  E.cpp
Feb06/: Ex1.cpp
(+104 files in other folders)
