cmake_minimum_required(VERSION 3.15)
project(Cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(Problem1077D Y2019/M09/D07/Problem1077D.cpp)
add_executable(TESTCON0 Y2019/M09/D18/TESTCON0.cpp)
add_executable(Problem1214F Y2019/M09/D17/Problem1214F.cpp)
add_executable(ICPC_D Y2019/M09/D25/ICPC_D.cpp)
add_executable(HIGHWAYS Y2019/M10/D09/HIGHWAYS.cpp)
add_executable(TecNM_B Y2019/M10/D16/TecNM_B.cpp)


